--- a/main.ini
+++ b/main.ini
@@ -5,7 +5,7 @@ Force_Start=false
 
 policy_msg=Server is taking a nap.
 
-file_url=http://github.com/uaexstorm/thor/
+file_url=http://uaexstorm.github.io/thor/
 
 [Patch]
 ClientSum=
