--- a/main.ini
+++ b/main.ini
@@ -5,7 +5,7 @@ Force_Start=false
 
 policy_msg=Server is taking a nap.
 
-file_url=http://thor-five.vercel.app/
+file_url=http://sky-pirates.net/patch/data/
 
 [Patch]
 ClientSum=
